// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyCoursesList > matches snapshot while loading 1`] = `
<div>
  <h1
    class="text-xl font-bold mb-6"
  >
    My courses
  </h1>
  <p>
    Loading...
  </p>
  <div
    class="flex flex-col max-w-[50%] gap-4"
  />
</div>
`;

exports[`MyCoursesList > matches snapshot with loaded courses 1`] = `
<div>
  <h1
    class="text-xl font-bold mb-6"
  >
    My courses
  </h1>
  <div
    class="flex flex-col max-w-[50%] gap-4"
  >
    <div
      class="flex justify-between bg-white p-4 border rounded-lg"
    >
      <h1
        class="text-lg"
      >
        React Basics
      </h1>
      <a
        href="/dashboard/courses/course-1"
      >
        View the course
      </a>
    </div>
    <div
      class="flex justify-between bg-white p-4 border rounded-lg"
    >
      <h1
        class="text-lg"
      >
        Advanced TypeScript
      </h1>
      <a
        href="/dashboard/courses/course-2"
      >
        View the course
      </a>
    </div>
  </div>
</div>
`;
